--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -2096,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2109,7 @@
        "        [15.5, 15.5]]))"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -2131,8 +2131,8 @@
      "text": [
       "Observed\n",
       "\n",
-      "[[49 20]\n",
-      " [ 1 30]]\n",
+      "[[ 8037 14999]\n",
+      " [12174 22702]]\n",
       "---\n",
       "Expected\n",
       "\n",
@@ -2141,7 +2141,7 @@
       "---\n",
       "\n",
       "chi^2 = 36.6526\n",
-      "p     = 0.0000\n"
+      "p     = 0.00000000\n"
      ]
     }
    ],
@@ -2153,21 +2153,21 @@
     "print(expected.astype(int))\n",
     "print('---\\n')\n",
     "print(f'chi^2 = {chi2:.4f}')\n",
-    "print(f'p     = {p:.4f}')"
+    "print(f'p     = {p:.8f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2179,22 +2179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We reject the null hypothesis\n"
+      "Our p-value is less than α, we reject the null hypothesis\n"
      ]
     }
    ],
    "source": [
     "if p< alpha:\n",
-    "    print('We reject the null hypothesis')\n",
+    "    print('Our p-value is less than α, we reject the null hypothesis')\n",
     "else:\n",
-    "    print('We fail to reject the null hypothesis')"
+    "    print('Our p-value is greater than α, we fail to reject the null hypothesis')"
    ]
   },
   {
@@ -2441,6 +2441,41 @@
    "source": [
     "mpg =data('mpg')\n",
     "mpg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 234 entries, 1 to 234\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   manufacturer  234 non-null    object \n",
+      " 1   model         234 non-null    object \n",
+      " 2   displ         234 non-null    float64\n",
+      " 3   year          234 non-null    int64  \n",
+      " 4   cyl           234 non-null    int64  \n",
+      " 5   trans         234 non-null    object \n",
+      " 6   drv           234 non-null    object \n",
+      " 7   cty           234 non-null    int64  \n",
+      " 8   hwy           234 non-null    int64  \n",
+      " 9   fl            234 non-null    object \n",
+      " 10  class         234 non-null    object \n",
+      "dtypes: float64(1), int64(4), object(6)\n",
+      "memory usage: 21.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dtype tells you what is categorical (object) or continuous (float)\n",
+    "mpg.info()"
    ]
   },
   {
@@ -2733,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -2742,43 +2777,17 @@
      "text": [
       "Observed\n",
       "\n",
-      "[[11  7  0]\n",
-      " [ 4  5 10]\n",
-      " [26 11  0]\n",
-      " [13  0 12]\n",
-      " [ 0  9  0]\n",
-      " [ 0 14  0]\n",
-      " [ 8  0  0]\n",
-      " [ 4  0  0]\n",
-      " [ 0  0  3]\n",
-      " [ 4  0  0]\n",
-      " [ 4  9  0]\n",
-      " [ 0  5  0]\n",
-      " [14  0  0]\n",
-      " [15 19  0]\n",
-      " [ 0 27  0]]\n",
+      "[[ 8037 14999]\n",
+      " [12174 22702]]\n",
       "---\n",
       "Expected\n",
       "\n",
-      "[[ 7  8  1]\n",
-      " [ 8  8  2]\n",
-      " [16 16  3]\n",
-      " [11 11  2]\n",
-      " [ 3  4  0]\n",
-      " [ 6  6  1]\n",
-      " [ 3  3  0]\n",
-      " [ 1  1  0]\n",
-      " [ 1  1  0]\n",
-      " [ 1  1  0]\n",
-      " [ 5  5  1]\n",
-      " [ 2  2  0]\n",
-      " [ 6  6  1]\n",
-      " [14 15  3]\n",
-      " [11 12  2]]\n",
+      "[[34 34]\n",
+      " [15 15]]\n",
       "---\n",
       "\n",
-      "chi^2 = 232.0345\n",
-      "p     = 0.0000\n"
+      "chi^2 = 36.6526\n",
+      "p     = 0.00000000\n"
      ]
     }
    ],
@@ -2790,12 +2799,12 @@
     "print(expected.astype(int))\n",
     "print('---\\n')\n",
     "print(f'chi^2 = {chi2:.4f}')\n",
-    "print(f'p     = {p:.4f}')"
+    "print(f'p     = {p:.8f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2827,22 +2836,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We reject the null hypothesis\n"
+      "Our p-value is less than our alpha, we reject the null hypothesis\n"
      ]
     }
    ],
    "source": [
     "if p< alpha:\n",
-    "    print('We reject the null hypothesis')\n",
+    "    print('Our p-value is less than our alpha, we reject the null hypothesis')\n",
     "else:\n",
-    "    print('We fail to reject the null hypothesis')"
+    "    print('Our p-value is greater than our alpha, we fail to reject the null hypothesis')"
    ]
   },
   {
@@ -3405,6 +3414,293 @@
    "source": [
     "#### b. Is an employee's gender independent of whether or not they are or have been a manager?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#join deparment manager and employees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query2 = '''SELECT *\n",
+    "FROM employees\n",
+    "LEFT JOIN dept_manager USING(emp_no)\n",
+    "JOIN titles USING(emp_no)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>hire_date</th>\n",
+       "      <th>dept_no</th>\n",
+       "      <th>from_date</th>\n",
+       "      <th>to_date</th>\n",
+       "      <th>title</th>\n",
+       "      <th>from_date</th>\n",
+       "      <th>to_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>1953-09-02</td>\n",
+       "      <td>Georgi</td>\n",
+       "      <td>Facello</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-06-26</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>1986-06-26</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>1964-06-02</td>\n",
+       "      <td>Bezalel</td>\n",
+       "      <td>Simmel</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1985-11-21</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>1996-08-03</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10003</td>\n",
+       "      <td>1959-12-03</td>\n",
+       "      <td>Parto</td>\n",
+       "      <td>Bamford</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-08-28</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>1995-12-03</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>1954-05-01</td>\n",
+       "      <td>Chirstian</td>\n",
+       "      <td>Koblick</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-12-01</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>1986-12-01</td>\n",
+       "      <td>1995-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>1954-05-01</td>\n",
+       "      <td>Chirstian</td>\n",
+       "      <td>Koblick</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-12-01</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Senior Engineer</td>\n",
+       "      <td>1995-12-01</td>\n",
+       "      <td>9999-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   emp_no  birth_date first_name last_name gender   hire_date dept_no  \\\n",
+       "0   10001  1953-09-02     Georgi   Facello      M  1986-06-26    None   \n",
+       "1   10002  1964-06-02    Bezalel    Simmel      F  1985-11-21    None   \n",
+       "2   10003  1959-12-03      Parto   Bamford      M  1986-08-28    None   \n",
+       "3   10004  1954-05-01  Chirstian   Koblick      M  1986-12-01    None   \n",
+       "4   10004  1954-05-01  Chirstian   Koblick      M  1986-12-01    None   \n",
+       "\n",
+       "  from_date to_date            title   from_date     to_date  \n",
+       "0      None    None  Senior Engineer  1986-06-26  9999-01-01  \n",
+       "1      None    None            Staff  1996-08-03  9999-01-01  \n",
+       "2      None    None  Senior Engineer  1995-12-03  9999-01-01  \n",
+       "3      None    None         Engineer  1986-12-01  1995-12-01  \n",
+       "4      None    None  Senior Engineer  1995-12-01  9999-01-01  "
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "join_manager_gender = pd.read_sql(query2, url )\n",
+    "join_manager_gender.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf_inter = 0.95\n",
+    "alpha = 1- conf_inter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>title</th>\n",
+       "      <th>Assistant Engineer</th>\n",
+       "      <th>Engineer</th>\n",
+       "      <th>Manager</th>\n",
+       "      <th>Senior Engineer</th>\n",
+       "      <th>Senior Staff</th>\n",
+       "      <th>Staff</th>\n",
+       "      <th>Technique Leader</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>5952</td>\n",
+       "      <td>46063</td>\n",
+       "      <td>13</td>\n",
+       "      <td>39141</td>\n",
+       "      <td>37087</td>\n",
+       "      <td>42854</td>\n",
+       "      <td>6114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>9176</td>\n",
+       "      <td>68940</td>\n",
+       "      <td>11</td>\n",
+       "      <td>58609</td>\n",
+       "      <td>55766</td>\n",
+       "      <td>64537</td>\n",
+       "      <td>9045</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "title   Assistant Engineer  Engineer  Manager  Senior Engineer  Senior Staff  \\\n",
+       "gender                                                                         \n",
+       "F                     5952     46063       13            39141         37087   \n",
+       "M                     9176     68940       11            58609         55766   \n",
+       "\n",
+       "title   Staff  Technique Leader  \n",
+       "gender                           \n",
+       "F       42854              6114  \n",
+       "M       64537              9045  "
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observed = pd.crosstab(join_manager_gender.gender, join_manager_gender.title)\n",
+    "observed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TEACHER WALKTHROUGH- replace all the nulls with a 0\n",
+    "join_manager_gender.fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
